# api-builder

./: Cargo.toml  README.md
api-builder/: Cargo.toml  README.md
api-builder-derive/: Cargo.toml  README.md
api-builder-derive/src/: lib.rs
api-builder/examples/: all.rs  client.rs  endpoint.rs
api-builder/src/: client.rs  endpoint.rs  error.rs  lib.rs  macros.rs  prost.rs  query.rs  query_params.rs  raw.rs
api-builder/src/client/: mod.rs  reqwest.rs  wasm.rs
api-builder/src/combinators/: json.rs  mod.rs  prost.rs  raw.rs
api-builder/src/error/: body.rs  header.rs  http_client.rs  mod.rs
