[package]
name = "api_builder_derive"
license = "MIT"
description = "The derive macros for the api_builder crate"
repository = "https://github.com/Stefanuk12/api-builder"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling = "0.21"
quote = "1.0"
syn = "2.0"
