[package]
name = "api_builder"
license = "MIT"
description = "A simple API builder, inspired by the GitLab crate built upon reqwest"
repository = "https://github.com/Stefanuk12/api-builder"
readme = "README.md"
version = "0.1.0"
edition = "2021"
keywords = [
    "api",
    "builder",
    "rest",
    "restful",
    "reqwest"
]
categories = [
    "asynchronous",
    "api-bindings"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10"
http = "1.2"
reqwest = { version = "0.12", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
api_builder_derive = { path = "../api-builder-derive", optional = true }
anyhow = "1.0"
prost = { version = "0.13", optional = true }
async-trait = "0.1"
rquest = { version = "2.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { git = "https://github.com/rustwasm/gloo.git" }
web-sys = "0.3"
js-sys = "0.3"

[features]
default = ["derive"]
rquest = ["dep:rquest"]
reqwest = ["dep:reqwest"]
reqwest_blocking = ["reqwest", "reqwest/blocking"]
derive = ["dep:api_builder_derive"]
prost = ["dep:prost"]

[[example]]
name = "all"
path = "examples/all.rs"
required-features = ["reqwest_blocking"]

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["derive", "reqwest"]

[[example]]
name = "endpoint"
path = "examples/endpoint.rs"
required-features = ["derive"]
