[package]
name = "api_builder"
license = "MIT"
description = "A simple client-agnostic API builder, inspired by the GitLab crate"
repository = "https://github.com/Stefanuk12/api-builder"
readme = "README.md"
version = "0.1.0"
edition = "2024"
keywords = ["api", "builder", "rest", "client-agnostic", "agnostic"]
categories = ["asynchronous", "api-bindings"]

[dependencies]
anyhow = "1.0"
api_builder_derive = { version = "0.1.0", path = "../api-builder-derive", optional = true }
bytes = "1.10"
http = "1.3"
prost = { version = "0.14", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6.0"
web-sys = "0.3"
js-sys = "0.3"

[features]
default = ["derive"]
reqwest = ["dep:reqwest"]
reqwest_blocking = ["reqwest", "reqwest/blocking"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
derive = ["dep:api_builder_derive"]
prost = ["dep:prost"]

[[example]]
name = "all"
path = "examples/all.rs"
required-features = ["reqwest_blocking"]

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["derive", "reqwest"]

[[example]]
name = "endpoint"
path = "examples/endpoint.rs"
required-features = ["derive"]
